# trivy-ssvc

./: .gitignore  README.md  pyproject.toml
ssvc_calc/: __init__.py  cli.py  core.py
tests/: test_decide.py  test_trivy_ssvc.py
trivy_ssvc/: exploit.py  main.py  notify.py  output.py  ssvc.py  state.py  trivy.py
