[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trivy-ssvc"
version = "0.1.0"
description = "SSVC prioritization for Trivy vulnerability scan results"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
trivy-ssvc = "trivy_ssvc.main:main"
